# 100-exercises-to-learn-rust

./: rustc-ice-2026-05-25T21_13_41-67755.txt
exercises/02_basic_calculator/02_variables/src/: lib.rs
exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs  main.rs
exercises/02_basic_calculator/09_saturating/src/: lib.rs  main.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/09_heap/src/: lib.rs
exercises/03_ticket_v1/10_references_in_memory/src/: lib.rs
exercises/03_ticket_v1/11_destructor/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/00_intro/src/: lib.rs
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/03_operator_overloading/src/: lib.rs
exercises/04_traits/04_derive/src/: lib.rs
exercises/04_traits/07_deref/src/: lib.rs
exercises/04_traits/08_sized/src/: lib.rs
exercises/04_traits/09_from/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/: Cargo.toml
exercises/05_ticket_v2/10_packages/: Cargo.toml
helpers/mdbook-exercise-linker/: Cargo.toml
helpers/mdbook-link-shortener/: Cargo.toml
(+31 files in other folders)
