[package]
name = "mdbook-link-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bimap = { version = "0.6.3", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
mdbook = "0.5.2"
pulldown-cmark = "0.13.3"
pulldown-cmark-to-cmark = "22"
semver = "1.0.28"
serde_json = "1.0.149"
